objects/Lead.object
<CustomObject>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tz__DST_Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>This is a hidden field and should not be added to the page layouts.</inlineHelpText>
        <label>DST Setting</label>
        <referenceTo>tz__DST_Setting__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24_Short__c</fullName>
        <description>Shows the current local time (without date) for the Lead in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTC_Offset_F__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 )
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 15, 2 )
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone_F__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the current local time (without date) for the Lead in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24__c</fullName>
        <description>Shows the current local time for the Lead in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTC_Offset_F__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp;
LEFT( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 4 ) &amp; &quot; &quot; &amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 )
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 15, 2 )
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone_F__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the current local time for the Lead in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_Short__c</fullName>
        <description>Shows the current local time (without date) for the Lead.</description>
        <formula>IF(ISBLANK(tz__UTC_Offset_F__c),
&quot;Unknown&quot;,
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 15, 2 )
&amp;&quot; &quot;&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
)
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone_F__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the current local time (without date) for the Lead.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time__c</fullName>
        <description>Shows the current local time for the Lead.</description>
        <formula>IF(ISBLANK(tz__UTC_Offset_F__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp;
LEFT( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 4 ) &amp; &quot; &quot; &amp;
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 15, 2 )
&amp;&quot; &quot;&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
)
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone_F__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the current local time for the Lead.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_DST_Full__c</fullName>
        <description>Full timezone name when the DST is on. This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>Full timezone name when the DST is on. This is a hidden field and should not be added to the page layouts.</inlineHelpText>
        <label>Timezone DST (Full)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_DST__c</fullName>
        <description>Timezone abbreviation when DST is on (PDT, EDT, etc.). This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>Timezone abbreviation when DST is on (PDT, EDT,etc.). This is a hidden field and should not be added to the page layouts.</inlineHelpText>
        <label>Timezone DST</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_F__c</fullName>
        <description>Current timezone abbreviation (PST, EST,etc..)</description>
        <formula>IF( tz__DST_Setting__r.tz__DST__c , tz__Timezone_DST__c, tz__Timezone__c )</formula>
        <inlineHelpText>Current timezone abbreviation (PST, EST,etc..)</inlineHelpText>
        <label>Timezone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_Full_F__c</fullName>
        <description>Current timezone full name.</description>
        <formula>IF( tz__DST_Setting__r.tz__DST__c , tz__Timezone_DST_Full__c, tz__Timezone_Full__c )</formula>
        <inlineHelpText>Current timezone full name.</inlineHelpText>
        <label>Timezone (Full)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_Full__c</fullName>
        <description>Full timezone name when the DST is off. This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>Full timezone name.</inlineHelpText>
        <label>Timezone Standard (Full)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_IANA__c</fullName>
        <description>Timezone as defined by Internet Assigned Numbers Authority (IANA).</description>
        <inlineHelpText>Timezone as defined by Internet Assigned Numbers Authority (IANA).</inlineHelpText>
        <label>Timezone (IANA)</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_SFDC__c</fullName>
        <description>Salesforce IANA timezone.</description>
        <inlineHelpText>Salesforce IANA timezone.</inlineHelpText>
        <label>Timezone SFDC</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone__c</fullName>
        <description>Timezone abbreviation when DST is off (PST, EST, etc.). This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>Current timezone abbreviation (PST, EST,etc..)</inlineHelpText>
        <label>Timezone Standard</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__UTC_Offset_DST__c</fullName>
        <description>UTC Offset when the DST is on. This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>UTC Offset when the DST is on. This is a hidden field and should not be added to the page layouts.</inlineHelpText>
        <label>UTC Offset DST</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tz__UTC_Offset_F__c</fullName>
        <description>Current UTC timezone offset.</description>
        <formula>IF( tz__DST_Setting__r.tz__DST__c , tz__UTC_Offset_DST__c , tz__UTF_Offset__c )</formula>
        <inlineHelpText>Current UTC timezone offset.</inlineHelpText>
        <label>UTC Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tz__UTF_Offset__c</fullName>
        <description>UTC Offset when the DST is off. This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>Shows the current UTC timezone offset of the Lead.</inlineHelpText>
        <label>UTC Offset Standard</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>